--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         format_sql: false
         use_sql_comments: false
         hbm2ddl:
-          auto: create
+          auto: update
     database: mysql
   profiles:
     include:
@@ -32,5 +32,5 @@ spring:
 #
 
 
-#jwt:
-#  secret: ${JWT_SECRET_KEY}
+jwt:
+  secret: ${JWT_SECRET}
