--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,13 @@ on:
   push:
     branches:
       - main
+      - develop
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Connect deploy key
-        uses: cloudtype-github-actions/connect@v1
-        with:
-          token: ${{ secrets.CLOUDTYPE_TOKEN }}
-          ghtoken: ${{ secrets.GHP_TOKEN }}
       - name: Deploy
         uses: cloudtype-github-actions/deploy@v1
         with:
@@ -24,9 +20,27 @@ jobs:
             name: likelion-13th-flexswu-backend
             app: java@17
             options:
-              env: []
+              ports: 8080
+              env:
+                - name: SPRING_PROFILES_ACTIVE
+                  value: dev
+                - name: DB_USERNAME
+                  value: ${{ secrets.DB_USERNAME }}
+                - name: DB_PASSWORD
+                  value: ${{ secrets.DB_PASSWORD }}
+                - name: DB_URL
+                  value: ${{ secrets.DB_URL }}
+                - name: DEV_DB_USERNAME
+                  value: ${{ secrets.DEV_DB_USERNAME }}
+                - name: DEV_DB_PASSWORD
+                  value: ${{ secrets.DEV_DB_PASSWORD }}
+                - name: DEV_DB_URL
+                  value: ${{ secrets.DEV_DB_URL }}
+                - name: GEMINI_API_KEY
+                - name: JWT_SECRET_KEY
+                  value: ${{ secrets.JWT_SECRET_KEY }}
               buildenv: []
             context:
               git:
-                url: git@github.com:${{ github.repository }}.git
+                url: https://github.com/${{ github.repository }}.git
                 ref: ${{ github.ref }}
