fix: deploy 코드 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,7 @@ jobs:
                   value: ${{ secrets.DEV_DB_PASSWORD }}
                 - name: DEV_DB_URL
                   value: ${{ secrets.DEV_DB_URL }}
-                - name: GEMINI_API_KEY
-                - name: JWT_SECRET_KEY
+                - name: JWT_SECRET
                   value: ${{ secrets.JWT_SECRET }}
               buildenv: []
             context:
