refactor: 회원가입: 마케팅 동의 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         format_sql: false
         use_sql_comments: false
         hbm2ddl:
-          auto: create
+          auto: update
     database: mysql
   profiles:
     include:
