--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,7 @@ jwt:
   secret: ${JWT_SECRET}
   access-exp-time: 3600000         # 1시간 (1000ms * 60 * 60)
   refresh-exp-time: 604800000      # 7일 (1000ms * 60 * 60 * 24 * 7)
+
+past:
+  api:
+    base-url: ${PAST_API_BASE_URL}
