--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,8 @@ jobs:
                   value: ${{ secrets.DEV_DB_URL }}
                 - name: JWT_SECRET
                   value: ${{ secrets.JWT_SECRET }}
+                - name: PAST_API_BASE_URL
+                  value: ${{ secrets.PAST_API_BASE_URL }}
               buildenv: []
             context:
               git:
