--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,6 @@ jwt:
   access-exp-time: 3600000         # 1시간 (1000ms * 60 * 60)
   refresh-exp-time: 604800000      # 7일 (1000ms * 60 * 60 * 24 * 7)
 
-past:
+fast:
   api:
-    base-url: ${PAST_API_BASE_URL}
+    base-url: ${FAST_API_BASE_URL}
