feat: 가게 분위기 카테고리 요청 후 유형 응답값 받음

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// 데이터베이스 드라이버
+	runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
