--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         format_sql: false
         use_sql_comments: false
         hbm2ddl:
-          auto: create
+          auto: update
     database: mysql
   profiles:
     include:
@@ -33,7 +33,7 @@ spring:
 jwt:
   secret: ${JWT_SECRET}
   access-exp-time: 3600000         # 1시간 (1000ms * 60 * 60)
-  refresh-exp-time: 604800000      # 7일 (1000ms * 60 * 60 * 24 * 7)
+  refresh-exp-time: 86400000       # 1일 (1000ms * 60 * 60 * 24)
 
 fast:
   api:
